--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.14.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/react-modal": "^3.16.0",
     "@types/react-router-hash-link": "^2.4.6"
   }
 }
